# DattaBot

./: .gitattributes  .gitignore  DATTABOT_VERSION_1_0__weights.pt  DATTABOT_VERSION_1_0_weights.pt  README.md  api_example.py  api_runner.py  cli_parser.py  client.py  dattabot_black_format.toml  notes.md  pyproject.toml  pytest.ini  requirements.txt  run.py  training_log.txt
configs/: dattabot_v1.yaml
model/: agent.py  main.py
src/: agent.py  agent_components.py  agent_config.py  agent_profiler.py  api.py  api_interface.py  checkpointing.py  communication_mgr.py  conversation_manager.py  data_formatter.py  data_loader.py  gpu_profiler.py  inference_engine.py  logger.py  metric_tracker.py  model.py  tokenizer.py  training_engine.py  util.py
src/evals/: eval_engine.py  eval_humaneval.py
src/model/: model.py  moe.py  rms_norm.py
src/tformer_model/: old_model.py
tests/: test_agent.py  test_api.py  test_api_interface.py  test_checkpointing.py  test_communication_mgr.py  test_conversation_manager.py  test_data_formatter.py  test_data_loader.py  test_gpu_profiler.py  test_inference_engine.py  test_metric_tracker.py  test_model.py  test_smoke_test.py  test_tokenizer.py
