[project]
name = "dattabot"
version = "0.1.0"
description = "Dattabot project, see more on github"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.3.1",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.0",
    "aiosignal>=1.4.0",
    "annotated-types>=0.7.0",
    "antlr4-python3-runtime>=4.9.3",
    "anyio>=4.11.0",
    "async-timeout>=5.0.1",
    "attrs>=25.4.0",
    "black>=25.9.0",
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.4",
    "click>=8.3.0",
    "colorama>=0.4.6",
    "contourpy>=1.3.2",
    "cycler>=0.12.1",
    "datasets>=4.2.0",
    "dill>=0.4.0",
    "distro>=1.9.0",
    "exceptiongroup>=1.3.0",
    "filelock>=3.20.0",
    "fonttools>=4.60.1",
    "frozenlist>=1.8.0",
    "fsspec>=2025.9.0",
    "gitdb>=4.0.12",
    "gitpython>=3.1.45",
    "graphviz>=0.21",
    "grpcio>=1.75.1",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "huggingface-hub>=0.35.3",
    "hydra-core>=1.3.2",
    "idna>=3.11",
    "iniconfig>=2.1.0",
    "jinja2>=3.1.6",
    "jiter>=0.11.0",
    "kiwisolver>=1.4.9",
    "markdown>=3.9",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.7",
    "mpmath>=1.3.0",
    "multidict>=6.7.0",
    "multiprocess>=0.70.16",
    "mypy-extensions>=1.1.0",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "nvidia-cublas-cu11>=11.11.3.6",
    "nvidia-cuda-cupti-cu11>=11.8.87",
    "nvidia-cuda-nvrtc-cu11>=11.8.89",
    "nvidia-cuda-runtime-cu11>=11.8.89",
    "nvidia-cudnn-cu11>=9.10.2.21",
    "nvidia-cufft-cu11>=10.9.0.58",
    "nvidia-curand-cu11>=10.3.0.86",
    "nvidia-cusolver-cu11>=11.4.1.48",
    "nvidia-cusparse-cu11>=11.7.5.86",
    "nvidia-nccl-cu11>=2.21.5",
    "nvidia-nvtx-cu11>=11.8.86",
    "omegaconf>=2.3.0",
    "openai>=2.4.0",
    "optree>=0.17.0",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pathspec>=0.12.1",
    "pillow>=12.0.0",
    "platformdirs>=4.5.0",
    "pluggy>=1.6.0",
    "portalocker>=3.2.0",
    "propcache>=0.4.1",
    "protobuf>=6.33.0",
    "psutil>=7.1.0",
    "pyarrow-stubs>=20.0.0.20250928",
    "pydantic>=2.12.2",
    "pydantic-core>=2.41.4",
    "pygments>=2.19.2",
    "pyparsing>=3.2.5",
    "pytest>=8.4.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "regex>=2025.9.18",
    "requests>=2.32.5",
    "safetensors>=0.6.2",
    "sentry-sdk>=2.42.0",
    "six>=1.17.0",
    "smmap>=5.0.2",
    "sniffio>=1.3.1",
    "sympy>=1.14.0",
    "tensorboard>=2.20.0",
    "tensorboard-data-server>=0.7.2",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.1",
    "tomli>=2.3.0",
    "torch>=2.9.0",
    "torch-tb-profiler>=0.4.3",
    "torchaudio>=2.9.0",
    "torchdata>=0.11.0",
    "torchtext>=0.18.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "triton>=3.5.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "wandb>=0.22.2",
    "werkzeug>=3.1.3",
    "xxhash>=3.6.0",
    "yarl>=1.22.0",
]
