[project]
name = "dattabot"
version = "0.1.0"
description = "Dattabot project, see more on github"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.2.0",
    "hydra-core>=1.3.2",
    "psutil>=7.1.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
]
